--- a/papersframe.html
+++ b/papersframe.html
@@ -36,7 +36,7 @@
 		<tr>
 			<td>
 			<i>Does Choice Change Preferences? An Incentivized Test of the Mere Choice Effect</i>, 
-			Carlos Al&oacute;s-Ferrer and Georg D. Granic, <strong>Experimental Economics</strong>, forthcoming.
+			Carlos Al&oacute;s-Ferrer and Georg D. Granic, <strong>Experimental Economics</strong>, 26, July 2023, 499-521.
          </td><td class="linkcell"><a href="https://rdcu.be/ct6YY" target="_blank">SharedIt Link</a>
          <br><a href="https://doi.org/10.1007/s10683-021-09728-5" target="_blank">Journal Link</a>			
 			</td>
