--- a/papersframe.html
+++ b/papersframe.html
@@ -27,6 +27,12 @@
       
       <table class="papertable">
 	<tbody>
+	<tr>
+			<td width=85%><i>Improving Risky-Choice Predictions Using Response Times</i>, 
+			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Journal of Political Economy: Microeconomics</strong>, forthcoming.
+			</td><td class="linkcell"><a href="files/PredictionwithRTs.pdf" target="_blank">Author-Generated Accepted Version</a>
+			</td>
+		</tr>
 		<tr>
 			<td width=85%><i>Part-Time Bayesians: Incentives and Behavioral Heterogeneity in Belief Updating</i>, 
 			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Management Science</strong>, forthcoming.
