--- a/newsframe.html
+++ b/newsframe.html
@@ -22,6 +22,22 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">11.01.2024</td>
+			<td width=70%><i>Invited Talk at University of Milano-Statale:</i> 
+			TBA. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">10.01.2024</td>
+			<td width=70%><i>Invited Talk at University of Milano-Bicocca:</i> 
+			TBA. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">18.11.2023</td>
+			<td width=70%><i>Conference Talk at the 
+			<a href="https://drive.google.com/file/d/1JY4FbxEUJZxL0_erycXNePyM3Nx8h7CG/view" target="_blank">Red Espa&ntilde;ola de Eclecci&oacute;n Social (REES XX; Castell&oacute;n, Spain)</a>:</i> 
+			An Experimental Investigation of Compromise Rules. 
+			</td><td class="linkcell">
+			</td></tr>	
 <tr><td class="datecell">25.10.2023<br>09:00 CET</td>
 			<td width=70%><i>Opening Keynote Talk, 
 			<a href="https://www.fuw-forum.ch/" target="_blank">KMU Forum Finanz und Wirtschaft</a> (GDI, R&uuml;schlikon, Switzerland):</i> 
