--- a/newsframe.html
+++ b/newsframe.html
@@ -22,14 +22,24 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">22.03.2024</td>
+			<td width=70%><i>Conference Talk at the Workshop on Decision Impairments-The Psychological View, Technical University of Berlin (Germany)</i> 
+			Cognitive Load in Economic Decisions. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">22.03.2024</td>
+			<td width=70%><i>Invited Talk at HEC Lausanne (Switzerland):</i> 
+			Learning Preferences from Response Times. 
+			</td><td class="linkcell">
+			</td></tr>
 <tr><td class="datecell">11.01.2024</td>
-			<td width=70%><i>Invited Talk at University of Milano-Statale:</i> 
-			TBA. 
+			<td width=70%><i>Invited Talk at University of Milano-Statale (Italy):</i> 
+			Learning Preferences from Response Times. 
 			</td><td class="linkcell">
 			</td></tr>
 <tr><td class="datecell">10.01.2024</td>
-			<td width=70%><i>Invited Talk at University of Milano-Bicocca:</i> 
-			TBA. 
+			<td width=70%><i>Invited Talk at University of Milano-Bicocca (Italy):</i> 
+			Noise and Bias: The Determinants of Decisions Under Risk. 
 			</td><td class="linkcell">
 			</td></tr>
 <tr><td class="datecell">18.11.2023</td>
