Updated index and planned talks

--- a/newsframe.html
+++ b/newsframe.html
@@ -22,8 +22,13 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">15.05.2024</td>
+			<td width=70%><i>Invited at the <a href="https://www.fernfh.ac.at/" target="_blank">Ferdinand Porsche Fern-Fachhochschule (Austria):</i> 
+			TBA. 
+			</td><td class="linkcell">
+			</td></tr>
 <tr><td class="datecell">22.03.2024</td>
-			<td width=70%><i>Conference Talk at the Workshop on Decision Impairments-The Psychological View, Technical University of Berlin (Germany)</i> 
+			<td width=70%><i>Conference Talk at the Workshop on Decision Impairments-The Psychological View, Technical University of Berlin (Germany):</i> 
 			Cognitive Load in Economic Decisions. 
 			</td><td class="linkcell">
 			</td></tr>
@@ -44,13 +49,13 @@
 			</td></tr>
 <tr><td class="datecell">18.11.2023</td>
 			<td width=70%><i>Conference Talk at the 
-			<a href="https://drive.google.com/file/d/1JY4FbxEUJZxL0_erycXNePyM3Nx8h7CG/view" target="_blank">Red Espa&ntilde;ola de Eclecci&oacute;n Social (REES XX; Castell&oacute;n, Spain)</a>:</i> 
+			<a href="https://drive.google.com/file/d/1JY4FbxEUJZxL0_erycXNePyM3Nx8h7CG/view" target="_blank">Red Espa&ntilde;ola de Elecci&oacute;n Social (REES XX; Castell&oacute;n, Spain)</a>:</i> 
 			An Experimental Investigation of Compromise Rules. 
 			</td><td class="linkcell">
 			</td></tr>	
 <tr><td class="datecell">25.10.2023<br>09:00 CET</td>
 			<td width=70%><i>Opening Keynote Talk, 
-			<a href="https://www.fuw-forum.ch/" target="_blank">KMU Forum Finanz und Wirtschaft</a> (GDI, R&uuml;schlikon, Switzerland):</i> 
+			<a href="https://www.fuw-forum.ch/kmu2023" target="_blank">KMU Forum Finanz und Wirtschaft</a> (GDI, R&uuml;schlikon, Switzerland):</i> 
 			Vom eigenen Gehirn ausgetrickst? Entscheidungsfehler bei F&uuml;hrungskr&auml;ften und wie man sie vermeidet. 
 			</td><td class="linkcell">
 			</td></tr>
