--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Carlos Al&oacute;s-Ferrer</title>
-<meta name="Keywords" content="Alos-Ferrer, Neuroeconomics, ZNE, Economic Psychology, JOEP, Microeconomics, Decision making, Game Theory, Response Times">
+<meta name="Keywords" content="Alos-Ferrer, Better decisions, Neuroeconomics, Economic Psychology, JOEP, Microeconomics, Decision making, Game Theory, Response Times">
 <link rel="stylesheet" href="blocks.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 <div class="container wrapper">
   <div id="top">
     <table width=100%><tbody><tr><td width=50%><h1>Carlos Al&oacute;s-Ferrer</h1>
-    <p>Professor of Decision and Neuroeconomic Theory</p></td>
+    <p>Chair Professor of Microeconomics</p></td>
     <td width=50% class="quote">No te tomes la vida en serio, al fin y al cabo no saldr&aacute;s vivo de ella (Les Luthiers).</td></tr></tbody></table>
   </div>
   <div class="wrapper">
@@ -26,7 +26,7 @@
        <li class="menuitem"><img src="pictures/GoogleScholarLogo.png" width=24px>&nbsp;<a href="https://scholar.google.com/citations?user=c45lelAAAAAJ&hl=en">Google Scholar<sup>®</sup></a></li>
        <li class="menuitem"><img src="pictures/ResearchGateLogo.png" width=24px>&nbsp;<a href="https://www.researchgate.net/profile/Carlos-Alos-Ferrer">Research Gate<sup>®</sup></a></li>
        <li class="menuitem"><img src="pictures/LinkedInLogo.png" width=24px>&nbsp;<a href="https://www.linkedin.com/in/alosferrer/">LinkedIn<sup>®</sup> Profile</a></li>
-       <li class="menuitem"><a href="mailto:&#99;&#97;&#114;&#108;&#111;&#115;&#46;&#97;&#108;&#111;&#115;&#45;&#102;&#101;&#114;&#114;&#101;&#114;&#64;&#101;&#99;&#111;&#110;&#46;&#117;&#122;&#104;&#46;&#99;&#104;">Contact</a></li>
+       <li class="menuitem"><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%63%2E%61%6C%6F%73%66%65%72%72%65%72%40%6C%61%6E%63%61%73%74%65%72%2E%61%63%2E%75%6B">Contact</a></li>
      </ul>
      
      <a href="https://www.journals.elsevier.com/journal-of-economic-psychology"><img src="pictures/CoverJoEP.jpg" width=100% alt="Journal of Economic Psychology"></a>
