New affiliation, corrected typos in talks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container wrapper">
   <div id="top">
     <table width=100%><tbody><tr><td width=50%><h1>Carlos Al&oacute;s-Ferrer</h1>
-    <p>Chair Professor of Microeconomics</p></td>
+    <p>Chair Professor of Economics</p></td>
     <td width=50% class="quote">No te tomes la vida en serio, al fin y al cabo no saldr&aacute;s vivo de ella (Les Luthiers).</td></tr></tbody></table>
   </div>
   <div class="wrapper">
