--- a/newsframe.html
+++ b/newsframe.html
@@ -23,7 +23,7 @@
 <table class="papertable">
 	<tbody>
 <tr><td class="datecell">15.05.2024</td>
-			<td width=70%><i>Invited at the <a href="https://www.fernfh.ac.at/" target="_blank">Ferdinand Porsche Fern-Fachhochschule (Austria):</i> 
+			<td width=70%><i>Invited Online Talk at the <a href="https://www.fernfh.ac.at/" target="_blank">Ferdinand Porsche Fern-Fachhochschule (Austria):</i> 
 			TBA. 
 			</td><td class="linkcell">
 			</td></tr>
