Fixed typos in last update

--- a/homeframe.html
+++ b/homeframe.html
@@ -7,14 +7,14 @@
 
 <img class="floating" src="pictures/Alos-Ferrer2.jpg" width=20% alt="Carlos Alos-Ferrer">
       <h1>About me</h1>
-      <p>I am an interdisciplinary researcher between (micro)economics, psychology, and (decision) neuroscience, a Chair Professor of Microeconomics
+      <p>I am an interdisciplinary researcher between (micro)economics, psychology, and (decision) neuroscience, a Chair Professor of Economics
 at <a href="https://www.lancaster.ac.uk/lums/" target="_blank">Lancaster University Management School</a> (as of March 1st, 2024),
 and Co-Editor in Chief of the <a href="https://www.journals.elsevier.com/journal-of-economic-psychology" target="_blank">Journal of Economic Psychology.</a>
-I have been full professor of at the Universities of Zurich, Cologne, and Konstanz, associate professor at the 
-Universities of Vienna and Salamanca, and Visiting Professor at New York University-Abu Dhabi. I am from Spain, speak German fluently, and currently split my time between Switzerland and the U.K.</p>  
+I have been full professor at the Universities of Zurich, Cologne, and Konstanz, associate professor at the 
+Universities of Vienna and Salamanca, and a frequent Visiting Professor at New York University-Abu Dhabi. I am from Spain, speak German fluently, and currently split my time between Switzerland and the U.K.</p>  
 
-<p>I am interested in how humans make economic decisions, ranging from decisions under risk to strategic decisions (game theory) and voting.
- My research methods include decision neuroscience ("neuroeconomics"), behavioral experiments, and mathematical modeling. 
+<p>My research focuses on understanding and improving human economic decisions, ranging from decisions under risk to strategic decisions (game theory) and voting.
+ For that I use decision neuroscience ("neuroeconomics"), behavioral experiments, and mathematical modeling. 
  I maintain a <a href="https://www.psychologytoday.com/intl/blog/decisions-and-the-brain" target="_blank">"Decisions and the Brain" blog at Psychology Today</a> and 
  a <a href="http://alosferrer.wordpress.com" target="_blank">personal blog at Wordpress</a>. I also co-organize the 
  <a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a> of the <a href="https://iarep.org/" target="_blank">IAREP</a>.</p>
