Removed "as of" from main page.

--- a/homeframe.html
+++ b/homeframe.html
@@ -8,7 +8,7 @@
 <img class="floating" src="pictures/Alos-Ferrer2.jpg" width=20% alt="Carlos Alos-Ferrer">
       <h1>About me</h1>
       <p>I am an interdisciplinary researcher between (micro)economics, psychology, and (decision) neuroscience, a Chair Professor of Economics
-at <a href="https://www.lancaster.ac.uk/lums/" target="_blank">Lancaster University Management School</a> (as of March 1st, 2024),
+at <a href="https://www.lancaster.ac.uk/lums/" target="_blank">Lancaster University Management School</a>,
 and Co-Editor in Chief of the <a href="https://www.journals.elsevier.com/journal-of-economic-psychology" target="_blank">Journal of Economic Psychology.</a>
 I have been full professor at the Universities of Zurich, Cologne, and Konstanz, associate professor at the 
 Universities of Vienna and Salamanca, and a frequent Visiting Professor at New York University-Abu Dhabi. I am from Spain, speak German fluently, and currently split my time between Switzerland and the U.K.</p>  
