Added hiring, fixed wrong entry in news and talks

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <div id="menubar">
      <ul id="menulist">
        <li class="menuitem"><a href="homeframe.html" target="middle frame">Home</a>
+       <li class="menuitem"><a href="hiring.html" target="middle frame"><i>Hiring!</i></a>
        <li class="menuitem"><a href="files/CV-Alos-Ferrer.pdf" target="middle frame">CV</a>
        <li class="menuitem"><a href="papersframe.html" target="middle frame">Publications</a>
        <li class="menuitem"><a href="WPsframe.html" target="middle frame">Working Papers</a> 
