--- a/newsframe.html
+++ b/newsframe.html
@@ -22,9 +22,10 @@
 		    
 <table class="papertable">
 	<tbody>
-<tr><td class="datecell">15.05.2024</td>
-			<td width=70%><i>Invited Online Talk at the <a href="https://www.fernfh.ac.at/" target="_blank">Ferdinand Porsche Fern-Fachhochschule (Austria):</i> 
-			TBA. 
+<tr><td class="datecell">17.05.2024</td>
+			<td width=70%><i>Talk at the Workshop in Economic Theory,
+			Royal Holloway University of London:</i> 
+			The Problem of Revealed Preference for Stochastic Choice Panels.
 			</td><td class="linkcell">
 			</td></tr>
 <tr><td class="datecell">22.03.2024</td>
