Updated publications and talks

--- a/newsframe.html
+++ b/newsframe.html
@@ -18,22 +18,28 @@
 				</tbody>
 </table>-->
 
-<h2>2023</h2>
-		    
+<h2>2024</h2>
+
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">13.06.2024</td>
+			<td width=70%><i>Talk at the Andrew and Brunner Workshop in Economic Theory,
+			Lancaster University:</i> 
+			The Problem of Revealed Preference for Stochastic Choice Panels.
+			</td><td class="linkcell">
+			</td></tr>
 <tr><td class="datecell">17.05.2024</td>
 			<td width=70%><i>Talk at the Workshop in Economic Theory,
 			Royal Holloway University of London:</i> 
 			The Problem of Revealed Preference for Stochastic Choice Panels.
 			</td><td class="linkcell">
 			</td></tr>
-<tr><td class="datecell">22.03.2024</td>
+<tr><td class="datecell">26.02.2024</td>
 			<td width=70%><i>Conference Talk at the Workshop on Decision Impairments-The Psychological View, Technical University of Berlin (Germany):</i> 
 			Cognitive Load in Economic Decisions. 
 			</td><td class="linkcell">
 			</td></tr>
-<tr><td class="datecell">22.03.2024</td>
+<tr><td class="datecell">22.02.2024</td>
 			<td width=70%><i>Invited Talk at HEC Lausanne (Switzerland):</i> 
 			Learning Preferences from Response Times. 
 			</td><td class="linkcell">
@@ -47,7 +53,15 @@
 			<td width=70%><i>Invited Talk at University of Milano-Bicocca (Italy):</i> 
 			Noise and Bias: The Determinants of Decisions Under Risk. 
 			</td><td class="linkcell">
-			</td></tr>
+			</td></tr>	
+				</tbody>
+</table>
+
+
+<h2>2023</h2>
+		    
+<table class="papertable">
+	<tbody>
 <tr><td class="datecell">18.11.2023</td>
 			<td width=70%><i>Conference Talk at the 
 			<a href="https://drive.google.com/file/d/1JY4FbxEUJZxL0_erycXNePyM3Nx8h7CG/view" target="_blank">Red Espa&ntilde;ola de Elecci&oacute;n Social (REES XX; Castell&oacute;n, Spain)</a>:</i> 
