--- a/papersframe.html
+++ b/papersframe.html
@@ -23,14 +23,14 @@
 	</tbody>
 </table>
     
-<h2>Forthcoming</h2>
+<h2>2024 and forthcoming</h2>
       
       <table class="papertable">
 	<tbody>
 	<tr>
 			<td width=85%><i>Improving Risky-Choice Predictions Using Response Times</i>, 
-			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Journal of Political Economy: Microeconomics</strong>, forthcoming.
-			</td><td class="linkcell"><a href="files/PredictionwithRTs.pdf" target="_blank">Author-Generated Accepted Version</a>
+			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Journal of Political Economy: Microeconomics</strong>, 2 (2), May 2024, 335-354.
+			</td><td class="linkcell"><a href="https://doi.org/10.1086/728666" target="_blank">Journal Link</a>
 			</td>
 		</tr> 
 		</tbody>
