Added style points to joep file

--- a/joep.html
+++ b/joep.html
@@ -11,9 +11,9 @@
       Unfortunately, this means that JoEP's Policies and Guidelines might not always be readily available or up-to-date in Elsevier's pages. 
       The standard, official links are these:</p>
       
-      <ul><li><a href="https://www.sciencedirect.com/journal/journal-of-economic-psychology/about/policies-and-guidelines" target="_blank">JoEP's Policies and Guidelines (Elsevier page)</a></li>
+      <p><ul><li><a href="https://www.sciencedirect.com/journal/journal-of-economic-psychology/about/policies-and-guidelines" target="_blank">JoEP's Policies and Guidelines (Elsevier page)</a></li>
       <li><a href="https://www.sciencedirect.com/journal/journal-of-economic-psychology/publish/guide-for-authors" target="_blank">General Guide for Authors (Elsevier)</a></li></ul>
-
+</p>
 		<p>The Policies and Guidelines will eventually be incorporated in those pages. 
 		Until that happens, <strong>the Policies and Guidelines here describe the expectations of the Editors of JoEP and take precedence</strong>.</p>
 
@@ -249,6 +249,39 @@ Exceptions to this rule can only be granted by direct invitation by the Editor(s
 before attempting to re-submit a previously-rejected manuscript. In case a manuscript is discovered to be a resubmission of a 
 previously-rejected manuscript, not previously approved by the Editor(s) in Chief, the evaluation process will be terminated regardless of its 
 state.</li>
+</ul>
+
+<h2><strong>JoEP STYLE</strong></h2>
+
+<p>JoEP favors a particular, specific style. While we are generally tolerant, deviations from 
+the following points might result in your paper returned to you, and if we have to return the paper to you
+too often, we might conclude that the distance between your paper and our expectations is too large.</li>
+
+<ul><li><strong><i>Direct, concise style:</i></strong>
+<br>We favor a direct, concise, scientific style. Explain what your research is about and how it relates to the appropriate
+subfield of research, proceed to describe your experiment or data collection, report your analysis, and conclude. Avoid long, oblique sentences. 
+Avoid repeating the same information in different parts of the manuscript.</li>
+
+<ul><li><strong><i>Numbered sections and subsections:</i></strong>
+<br>Please number your sections and subsections. Also number your manuscript pages, and your Online Appendix pages. 
+If you do not, it will be more difficult to refer to your content in our response and in reviewer reports.</li>
+
+<li><strong><i>Professional formatting:</i></strong>
+<br>We expect professional editing and formatting. 
+As a courtesy to reviewers, we do not send papers out for refereeing unless they are in a highly-polished state.
+Splitting figures and tables across pages, large numbers of typos, low-quality figures, screenshots of tables
+instead of tables, etc., are all red flags.</li>
+
+<li><strong><i>Footnotes:</i></strong>
+<br>Avoid footnotes as much as possible on initial submission. In any case, avoid long footnotes.
+Most footnotes in JoEP papers appear during the reviewing process. Please go through your footnotes. If important, integrate in the text.
+If not important, delete. If you keep any, a footnote is one or two sentences, not a paragraph.</li>
+
+<li><strong><i>Citing URLs:</i></strong>
+<br>Whenever you cite an online reference, check whether you can refer to an actual scientific or official source.
+If citing an online source is unavoidable, make a proper bibliographic entry including "last accessed" data and refer to it as a normal citation.
+If this is not appropriate because you are referring to a webpage in itself, e.g. a data collection service, use a bracket in the text. 
+Please never give URLs in footnotes.</li>
 </ul>
 
 <h2 id="Additional"><strong>ADDITIONAL GUIDANCE</strong></h2>
