Updated resources at joep

--- a/joep.html
+++ b/joep.html
@@ -17,7 +17,7 @@
 		<p>The Policies and Guidelines will eventually be incorporated in those pages. 
 		Until that happens, <strong>the Policies and Guidelines here describe the expectations of the Editors of JoEP and take precedence</strong>.</p>
 
-		<p><a href="#Additional">Additional Guidance</a> in the form of blog posts is also available at the end of this document.</a>
+		<p><a href="#Additional">Additional Guidance</a> in the form the most-recent Editorial and a series of explanatory blog posts is also linked below.</a>
 
 		<p>Please note that this document does not include Elsevier's "General Editorial Policies" which apply to any journal.
 
@@ -253,16 +253,22 @@ state.</li>
 
 <h2><strong>JoEP STYLE</strong></h2>
 
-<p>JoEP favors a particular, specific style. While we are generally tolerant, deviations from 
-the following points might result in your paper returned to you, and if we have to return the paper to you
-too often, we might conclude that the distance between your paper and our expectations is too large.</li>
+<p>JoEP favors a particular, specific style. This is our style, and other journals are different. While we are generally tolerant, deviations from 
+the following points might result in your paper returned to you, and if we have to return the paper to you too often, 
+we might conclude that the distance between your paper and our expectations is too large.</li>
 
 <ul><li><strong><i>Direct, concise style:</i></strong>
 <br>We favor a direct, concise, scientific style. Explain what your research is about and how it relates to the appropriate
 subfield of research, proceed to describe your experiment or data collection, report your analysis, and conclude. Avoid long, oblique sentences. 
 Avoid repeating the same information in different parts of the manuscript.</li>
 
-<ul><li><strong><i>Numbered sections and subsections:</i></strong>
+<li><strong><i>Consistent reporting of p-values:</i></strong>
+<br><i>p</i>-values are random variables. Avoid illusory precision, but be consistent. 
+Report all <i>p</i>-values in the text with three decimals. In particular, never write <i>p&lt;.05</i> to report a <i>p</i>-value. 
+Write the exact <i>p</i>-value instead, e.g. <i>p=.023</i>. Only use inequalities in the text when <i>p&lt;.001</i> (then write that).
+Also, note that <i>p = .000</i> is wrong. You mean <i>p&lt;.001</i>.
+
+<li><strong><i>Numbered sections and subsections:</i></strong>
 <br>Please number your sections and subsections. Also number your manuscript pages, and your Online Appendix pages. 
 If you do not, it will be more difficult to refer to your content in our response and in reviewer reports.</li>
 
@@ -282,9 +288,15 @@ If not important, delete. If you keep any, a footnote is one or two sentences, n
 If citing an online source is unavoidable, make a proper bibliographic entry including "last accessed" data and refer to it as a normal citation.
 If this is not appropriate because you are referring to a webpage in itself, e.g. a data collection service, use a bracket in the text. 
 Please never give URLs in footnotes.</li>
+
+<li><strong><i>Informative figures:</i></strong>
+<br>Make your figures as informative as possible, and in particular represent the entire dataset whenever possible.
+For example, boxplots are outdated. Use violin plots instead, which provide much more information in the same space.</li>
 </ul>
 
 <h2 id="Additional"><strong>ADDITIONAL GUIDANCE</strong></h2>
+
+<p>The most recent <a href="https://doi.org/10.1016/j.joep.2020.102309" target="_blank">Editorial</a> lays out our general policies and the rationale behind them.</p>
 
 <p>Please see <a href="https://alosferrer.wordpress.com" target="_blank">Carlos Al&oacute;s-Ferrer's blog</a> for additional guidance on JoEP submissions.
  Here is a multi-part <strong>Open Letter to JoEP Authors</strong>:</p>
