Added comment on "available upon request" to joep.

--- a/joep.html
+++ b/joep.html
@@ -266,7 +266,13 @@ Avoid repeating the same information in different parts of the manuscript.</li>
 <br><i>p</i>-values are random variables. Avoid illusory precision, but be consistent. 
 Report all <i>p</i>-values in the text with three decimals. In particular, never write <i>p&lt;.05</i> to report a <i>p</i>-value. 
 Write the exact <i>p</i>-value instead, e.g. <i>p=.023</i>. Only use inequalities in the text when <i>p&lt;.001</i> (then write that).
-Also, note that <i>p = .000</i> is wrong. You mean <i>p&lt;.001</i>.
+Also, note that <i>p = .000</i> is wrong. You mean <i>p&lt;.001</i>.</li>
+
+<li><strong><i>Full availability:</i></strong>
+<br>The expression <strong>"available upon request"</strong> is <strong>banned</strong> from JoEP. You should never use it.
+Taken together, your manuscript and Online Appendix must include everything needed to evaluate and understand your contribution.
+Please never state "available upon request" in a submission ot JoEP. If you need to mention additional materials (alternatvie model specifications, additional data, etc.),
+put them in the Online Appendix.</li>
 
 <li><strong><i>Numbered sections and subsections:</i></strong>
 <br>Please number your sections and subsections. Also number your manuscript pages, and your Online Appendix pages. 
