Corrected typos in JoEP

--- a/joep.html
+++ b/joep.html
@@ -271,7 +271,7 @@ Also, note that <i>p = .000</i> is wrong. You mean <i>p&lt;.001</i>.</li>
 <li><strong><i>Full availability:</i></strong>
 <br>The expression <strong>"available upon request"</strong> is <strong>banned</strong> from JoEP. You should never use it.
 Taken together, your manuscript and Online Appendix must include everything needed to evaluate and understand your contribution.
-Please never state "available upon request" in a submission ot JoEP. If you need to mention additional materials (alternatvie model specifications, additional data, etc.),
+Please never state "available upon request" in a submission to JoEP. If you need to mention additional materials (alternative model specifications, additional data, etc.),
 put them in the Online Appendix.</li>
 
 <li><strong><i>Numbered sections and subsections:</i></strong>
