Fixed wrong date of WP

--- a/WPsframe.html
+++ b/WPsframe.html
@@ -28,7 +28,7 @@
 		</tr>
 		<tr>
 			<td width=85%><i>Identifying Nontransitive Preferences</i>, 
-			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: Oct. 2023.
+			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: May 2024.
 			</td><td class="linkcell"><a href="files/TWTTransitivity-WP.pdf">Working Paper</a><!--<a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>-->
 			</td>
 		</tr>
