Added links to two WPs.

--- a/WPsframe.html
+++ b/WPsframe.html
@@ -20,10 +20,16 @@
      
 <table class="papertable">
 	<tbody>
-      <tr>
-			<td width=85%><i>Who Likes It More? Using Response Times To Elicit Group Preferences in Surveys</i>, 
-			Carlos Al&oacute;s-Ferrer and Michele Garagnani, last version: 2022.
-			</td><td class="linkcell"><a href="https://www.zora.uzh.ch/id/eprint/224551/" target="_blank">Working Paper</a>
+		<tr>
+			<td width=85%><i>Errors, Fast and Slow</i>, 
+			Carlos Al&oacute;s-Ferrer and Michele Garagnani, last version: August 2024.
+			</td><td class="linkcell"><a href="files/ErrorsFnS-WP.pdf">Working Paper</a><!--<a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>-->
+			</td>
+		</tr>
+		<tr>
+			<td width=85%><i>Common Ratio and Common Consequence Effects Arise from True Preferences</i>, 
+			Carlos Al&oacute;s-Ferrer, Ernst Fehr, and Michele Garagnani, last version: August 2024.
+			</td><td class="linkcell"><a href="files/TWTCE-WP.pdf">Working Paper</a><!--<a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>-->
 			</td>
 		</tr>
 		<tr>
@@ -32,9 +38,15 @@
 			</td><td class="linkcell"><a href="files/TWTTransitivity-WP.pdf">Working Paper</a><!--<a href="https://www.zora.uzh.ch/id/eprint/219280/" target="_blank">Working Paper</a>-->
 			</td>
 		</tr>
+      <tr>
+			<td width=85%><i>Who Likes It More? Using Response Times To Elicit Group Preferences in Surveys</i>, 
+			Carlos Al&oacute;s-Ferrer and Michele Garagnani, last version: 2022.
+			</td><td class="linkcell"><a href="https://www.zora.uzh.ch/id/eprint/224551/" target="_blank">Working Paper</a>
+			</td>
+		</tr>
 		<tr>
 			<td width=85%><i>Stochastic Choice and Preference Reversals</i>, 
-			Carlos Al&oacute;s-Ferrer, Johannes Buckenmaier, and Michele Garagnani, last version: 2022.
+			Carlos Al&oacute;s-Ferrer, Johannes Buckenmaier, and Michele Garagnani.
 			</td><td class="linkcell"><i>In Progress</i>
 			</td>
 		</tr>
