Updated talks and conferences

--- a/newsframe.html
+++ b/newsframe.html
@@ -10,18 +10,66 @@
 
 <p><i>(Since 2020)</i></p>
 
-<!--<h2>Upcoming</h2>
+<h2>Upcoming</h2>
 		    
 <table class="papertable">
 	<tbody>
-	
+<tr><td class="datecell">10-12.03.2025</td>
+			<td width=70%><i>Plenary Talk at the <a href="https://members.economicscience.org/Calendar/moreinfo.php?org_id=ESA&eventid=139079" target="_blank"> 2025 Asia-Pacific Meeting of the Economic Science Association</a>,
+			Osaka (Japan):</i> 
+			Learning Preferences from Response Times.
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">25.11.2024</td>
+			<td width=70%><i>Invited Talk at Universidad de Alicante (Spain):</i> 
+			Noise and Bias: The Determinants of Economic Decisions. 
+			</td><td class="linkcell">
+			</td></tr>	
 				</tbody>
-</table>-->
+</table>
 
 <h2>2024</h2>
 
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">7-8.11.2024</td>
+			<td width=70%><i>Plenary Talk at the <a href="https://conferences.ncl.ac.uk/neew/" target="_blank">Newcastle Experimental Economics Workshop</a>,
+			Newcastle (UK):</i> 
+			Learning Preferences from Response Times: An Overview.
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">1-2.11.2024</td>
+			<td width=70%><i>Talk at the <a href="https://wp.lancs.ac.uk/lgtc2024/" target="_blank">10th Lancaster University Game Theory Workshop</a>,
+			Lancaster University:</i> 
+			Efficient Networks.
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">23.10.2024</td>
+			<td width=70%><i>Invited Talk at Cambridge University, Economic Theory Seminar (UK):</i> 
+			Efficient Networks. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">02.10.2024</td>
+			<td width=70%><i>Invited Talk at Universidad Aut&oacute;noma de Madrid (Spain, Online):</i> 
+			Noise and Bias: The Determinants of Economic Decisions. 
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">19-20.09.2024</td>
+			<td width=70%><i>Conference Talk at (and organization of) the <a href="https://wp.lancs.ac.uk/lancasterbehavioural/" target="_blank">Lancaster Psychoeconomics Workshop</a>,
+			Lancaster University:</i> 
+			Noise and Bias: The Determinants of Economic Decisions.
+			</td><td class="linkcell">
+			</td></tr>
+<tr><td class="datecell">22.08.2024</td>
+			<td width=70%><i>Editor's Report for the <i>Journal of Economic Psychology</i> at
+			<a href="https://congresshub.uk/event/sabe-iarep-dundee-2024/" target="_blank">International Association for Research in Economic Psychology (IAREP) 2024 Conference</a> (Dundee, UK)</i>
+			</td><td></td>
+		</tr>
+<tr><td class="datecell">22.08.2024</td>
+			<td width=70%><i>Conference Talk at the
+			<a href="https://congresshub.uk/event/sabe-iarep-dundee-2024/" target="_blank">International Association for Research in Economic Psychology (IAREP) 2024 Conference</a> (Dundee, UK):</i>
+			Noise and Bias: The Determinants of Economic Decisions.</td><td class="linkcell"></td>
+		</tr>
 <tr><td class="datecell">13.06.2024</td>
 			<td width=70%><i>Talk at the Andrew and Brunner Workshop in Economic Theory,
 			Lancaster University:</i> 
@@ -94,12 +142,12 @@
 			</td></tr>
 <tr><td class="datecell">10.06.2023</td>
 			<td width=70%><i>Editor's Report for the <i>Journal of Economic Psychology</i> at
-			<a href="https://iarepsabe2023.sciencesconf.org//" target="_blank">International Association for Research in Economic Psychology (IAREP) 2023 Conference</a> (Nice, France)</i>
+			<a href="https://iarepsabe2023.sciencesconf.org/" target="_blank">International Association for Research in Economic Psychology (IAREP) 2023 Conference</a> (Nice, France)</i>
 			</td><td></td>
 		</tr>
 <tr><td class="datecell">9.06.2023</td>
 			<td width=70%><i>Conference Talk at the
-			<a href="https://iarepsabe2023.sciencesconf.org//" target="_blank">International Association for Research in Economic Psychology (IAREP) 2023 Conference</a> (Nice, France):</i>
+			<a href="https://iarepsabe2023.sciencesconf.org/" target="_blank">International Association for Research in Economic Psychology (IAREP) 2023 Conference</a> (Nice, France):</i>
 			Errors, Fast and Slow.</td><td class="linkcell"></td>
 		</tr>
 <tr><td class="datecell">1.06.2023</td>
