Updated papers page with last acceptance

--- a/papersframe.html
+++ b/papersframe.html
@@ -27,6 +27,12 @@
       
       <table class="papertable">
 	<tbody>
+		<tr>
+			<td width=85%><i>Improving Risky-Choice Predictions Using Response Times</i>, 
+			Carlos Al&oacute;s-Ferrer and Maximilian Mihm, <strong>Journal of Economic Theory</strong>, forthcoming.
+			</td><td class="linkcell"><a href="files/LogitCharacterizationJET.pdf" target="_blank">Accepted Version</a>
+			</td>
+		</tr> 
 	<tr>
 			<td width=85%><i>Improving Risky-Choice Predictions Using Response Times</i>, 
 			Carlos Al&oacute;s-Ferrer and Michele Garagnani, <strong>Journal of Political Economy: Microeconomics</strong>, 2 (2), May 2024, 335-354.
@@ -883,7 +889,7 @@
 			<td>&ldquo;Intervista a Carlos Al&oacute;s-Ferrer,&rdquo; interview by Pietro Terna, Sistemi Intelligenti, 3, December 2019, pp. 633--638.</td>
 		</tr>
 		<tr>
-			<td><a href="https://www.friedrich-verlag.de/shop/entscheiden" target="_blank">Entscheiden aus (mikro-)&ouml;konomischer Perspektive</a>, Unterricht Wirtschaft + Politik, 4/2017, pp. 2-7 (&quot;Basisartikel&quot;).</td>
+			<td><a href="https://www.friedrich-verlag.de/shop/entscheiden-544028" target="_blank">Entscheiden aus (mikro-)&ouml;konomischer Perspektive</a>, Unterricht Wirtschaft + Politik, 4/2017, pp. 2-7 (&quot;Basisartikel&quot;).</td>
 		</tr>
 		<tr>
 			<td>&ldquo;Economic Behavior and the Reflective-Impulsive Duality.&rdquo; In: Roland Deutsch, Bertram Gawronski, and Wilhelm Hofmann (Eds.), &ldquo;Reflective and Impulsive Determinants of Human Behavior,&rdquo; Routledge 2016, pp. 205-222.</td>
