Fixed typo in article title

--- a/papersframe.html
+++ b/papersframe.html
@@ -28,7 +28,7 @@
       <table class="papertable">
 	<tbody>
 		<tr>
-			<td width=85%><i>Improving Risky-Choice Predictions Using Response Times</i>, 
+			<td width=85%><i>A Characterization of the Luce Choice Rule for an Arbitrary Collection of Menus</i>, 
 			Carlos Al&oacute;s-Ferrer and Maximilian Mihm, <strong>Journal of Economic Theory</strong>, forthcoming.
 			</td><td class="linkcell"><a href="files/LogitCharacterizationJET.pdf" target="_blank">Accepted Version</a>
 			</td>
